resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: team-4 # 네임서비스 작성해고
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:686710509719:certificate/0eb3817e-1cbc-4397-b9cf-b91affd1bf00
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Service=argocd-server,Role=LB # 우리가 연결할 서비스 (service-client
  labels:
    app: client-ingress
spec:
  rules:
    - host: "team-4.shinhansec-pda.net" # 서브도메인 (rount 53과 같게 설정)
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-service # 쿠버네티스 서비스 이름
                port:
                  number: 3000 # 서비스 포트
    - host: "app-team-4.shinhansec-pda.net" # 서브도메인 (rount 53과 같게 설정)
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service # 쿠버네티스 서비스 이름
                port:
                  number: 8080 # 서비스 포트
